--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark" id="navbar">
     <a class="navbar-brand" href="#">MoviesApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -6,14 +6,25 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item" routerLinkActive = "active">
-          <a class="nav-link" routerLink="Home/">Inicio</a>
+        <li class="nav-item" routerLinkActive = "active" (click)="toggle()">
+          <a class="nav-link" [routerLink]="['Home', 'cartelera', '']">Cartelera</a>
+        </li>
+        <li class="nav-item" routerLinkActive = "active" (click)="toggle()">
+          <a class="nav-link" [routerLink]="['Home', 'tendencia', '']">Tendencias</a> 
+        </li>
+        <li class="nav-item" routerLinkActive = "active" (click)="toggle()">
+          <a class="nav-link" [routerLink]="['Home', 'tendenciaKids', '']">Infantiles</a>   
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Buscar..."
-                                          name="toSearch" [(ngModel)]="toSearch">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="button" (click)="Navigate()">Buscar</button>
+                                          name="toSearch" [(ngModel)]="toSearch"
+                                          (keydown.enter)="Navigate()"> 
+
+        <button class="btn btn-outline-success btn-block my-2 my-sm-0" type="button" 
+                (click)="Navigate()" [ngClass]="{'btn-block': closed}"> 
+                Buscar
+        </button>
       </form>
     </div>
   </nav>
